--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@ h1{
     font-size: 50px;
 }
 
-a{
-    color: aquamarine;
-    font-size: 16px;
+h2{
+    font-weight: 300;
+    font-size: 42px;
 }
 
 p{
@@ -20,11 +20,11 @@ p{
     color: grey;
 }
 
-h2{
-    font-weight: 300;
-    font-size: 42px;
+a{
+    color: aquamarine;
+    font-size: 16px;
 }
 
-.copyright{
+footer{
     text-align: right;
 }
